# discord_chatbot

./: .markdownlint.yml  .pre-commit-config.yaml  LICENSE  RAG.py  README.md  pyproject.toml
.github/workflows/: pre-commit.yml
discord_bot/: RAG.py  bot.py
